RESOLVED FIXED67714
[Qt][WK2] WebKitTestRunner does not produce crash logs
https://bugs.webkit.org/show_bug.cgi?id=67714
Summary [Qt][WK2] WebKitTestRunner does not produce crash logs
Balazs Kelemen
Reported 2011-09-07 10:18:18 PDT
Unfortunately it doesn't.
Attachments
Patch (3.24 KB, patch)
2011-09-12 06:47 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2011-09-12 06:47:52 PDT
Chang Shu
Comment 2 2011-09-12 07:05:00 PDT
Comment on attachment 107049 [details] Patch COOL!
Balazs Kelemen
Comment 3 2011-09-12 07:19:09 PDT
Comment on attachment 107049 [details] Patch Clearing flags on attachment: 107049 Committed r94955: <http://trac.webkit.org/changeset/94955>
Balazs Kelemen
Comment 4 2011-09-12 07:19:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.