[Qt][WK2] WebKitTestRunner does not produce crash logs https://bugs.webkit.org/show_bug.cgi?id=67714

Added a simple way of generating backtrace on crash
to the web process. The implementation is similar what
we have in DRT. It depends on GNU libc functionality
so it is only enabled where we are running in such an environment.

* WebKitTestRunner/InjectedBundle/qt/InjectedBundleQt.cpp:
(WTR::printBacktrace):
(WTR::crashHandler):
(WTR::InjectedBundle::platformInitialize):

git-svn-id: svn://svn.chromium.org/blink/trunk@94955 bbb929c8-8fbe-4397-9dbb-9b2b20218538